# VEB

./: .gitignore  README.md  pyproject.toml  requirements-models-cu12.txt  主实验设计_VEB_创新点压缩修订版.docx
configs/: assets.yaml  default.yaml  smoke.yaml
configs/datasets/: coco_chair.yaml  pope.yaml
configs/methods/: base.yaml  halc.yaml  opera.yaml  veb.yaml
configs/vocab/: coco_objects.yaml
docs/: result_schemas.md
examples/smoke/: caption_samples.jsonl  pope_random.jsonl
scripts/: check_assets.py  check_environment.py  compute_evidence.py  evaluate.py  export_results.py  extract_objects.py  revise_outputs.py  run_all.py  run_caption.py  run_pope.py  smoke_test.py
src/veb_reproduce/: __init__.py  pipeline.py
src/veb_reproduce/datasets/: coco.py  pope.py  types.py
src/veb_reproduce/evaluation/: chair.py  efficiency.py  pope.py
src/veb_reproduce/evidence/: __init__.py  cache.py  fake.py  grounding_dino.py  types.py
src/veb_reproduce/extraction/: __init__.py  extractors.py  types.py  vocabulary.py
src/veb_reproduce/models/: __init__.py  fake.py  llava_hf.py  llava_original.py  official_decoders.py  types.py
src/veb_reproduce/revision/: __init__.py  caption.py  pope.py
src/veb_reproduce/utils/: __init__.py  answers.py  config.py  io.py
src/veb_reproduce/veb/: __init__.py  demand.py  gap.py  token_alignment.py
tests/: test_caption_revision.py  test_chair_and_cache.py  test_demand_and_gap.py  test_model_backend_selection.py  test_pope_revision_and_metrics.py  test_smoke_pipeline.py  test_token_alignment.py
