[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veb-reproduce"
version = "0.1.0"
description = "VEB object-level visual evidence balance experiments for LVLM hallucination mitigation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "veb_reproduce contributors" }]
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
eval = [
    "pycocotools>=2.0.7",
]
models = [
    "accelerate>=0.27.0",
    "opencv-python>=4.8.0",
    "sentencepiece>=0.1.99",
    "transformers>=4.40.0",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
